test/test_suite/errors/error_decl_ok.c3
module errors;

errtype TheError
{
    A
}

errtype TheError2
{
    A,
    B
}

errtype TheError3
{
    C, D
}


